RESOLVED FIXED239947
HTML Parser: Wrong column number in CR-LF line ending style (DOS EOL style) HTML files
https://bugs.webkit.org/show_bug.cgi?id=239947
Summary HTML Parser: Wrong column number in CR-LF line ending style (DOS EOL style) H...
Fujii Hironori
Reported 2022-05-01 14:06:38 PDT
Created attachment 458652 [details] JSC stack (DOS EOL style) HTML Parser: Wrong column number in CR-LF line ending style (DOS EOL style) HTML files In this test case, WebKit reports the line number and column number as 2:31, but it should be 2:30.
Attachments
JSC stack (DOS EOL style) (101 bytes, text/html)
2022-05-01 14:06 PDT, Fujii Hironori
no flags
JSC stack (Unix EOL style) (99 bytes, text/html)
2022-05-01 14:07 PDT, Fujii Hironori
no flags
WIP patch (728 bytes, patch)
2022-05-01 16:46 PDT, Fujii Hironori
no flags
Patch (5.32 KB, patch)
2022-05-01 19:44 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2022-05-01 14:07:09 PDT
Created attachment 458653 [details] JSC stack (Unix EOL style)
Fujii Hironori
Comment 2 2022-05-01 14:08:43 PDT
The following tests can fail if the test files are checked out by Windows Git. js/dom/line-column-numbers.html js/dom/script-start-end-locations.html js/dom/stack-trace.html
Fujii Hironori
Comment 3 2022-05-01 16:46:40 PDT
Created attachment 458654 [details] WIP patch
Fujii Hironori
Comment 4 2022-05-01 19:44:20 PDT
EWS
Comment 5 2022-05-02 12:02:58 PDT
Committed r293672 (250174@main): <https://commits.webkit.org/250174@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458657 [details].
Radar WebKit Bug Importer
Comment 6 2022-05-02 12:03:14 PDT
Note You need to log in before you can comment on or make changes to this bug.